Modofied to incorporated review comments of revision r145. Added validation for authZ query and SQL script used by JUnit are moved to 'tests' folder and ANT build script is updated for the same. BASE64 codec of sun are replaced by apache commons BASE64 codec. commons-coded-1.4.jar is added for the same.